# optimal_options

./: .gitignore  DockerMake.yml  README.md  config_reader.py  requirements.txt  requirements_extra.txt  setup.cfg
artifacts/: db_info.md
artifacts/migration_scripts/: init_db.sql
resources/: config.yaml  nse.yaml
src/oo/actions/: __init__.py  build.py  db.py
src/oo/config/: __init__.py  config_reader.py  main_config_parser.py
src/oo/models/: historical_data.py  instrument_data.py
src/oo/storage/: __init__.py  sql_engine.py
storage/: __init__.py  repository.py
utils/: alembic.ini  arguments.py  db_actions.py  db_creds.sh  history.py  oo.py
utils/db_migration/: env.py
utils/db_migration/versions/: 16527ce62701_base_schema.py  7db6e800af71_empty_schema.py
