[metadata]
name = optimal_options
version = 0.0.1
author = Prasanth Ravi, Shayan Roychowdhary
author_email = prasanth.ravi@hotmail.com
url = https://github.com/pr-ravi/optimal_options

[options]
package_dir = 
    = src
packages = find_namespace:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    oo = oo.actions:parse